--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,4 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
-script:
-  - ./gradlew test installDebugAndroidTest
-  - adb shell am instrument -w -e size small de.wohlfrom.presenter.tests/android.support.test.runner.AndroidJUnitRunner
-  - adb shell am instrument -w -e size medium de.wohlfrom.presenter.tests/android.support.test.runner.AndroidJUnitRunner
+script: ./gradlew test connectedAndroidTest
