--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ before_script:
   # Create and start emulator
   - echo no | android create avd --force -n test -t android-22
   - emulator -avd test -no-audio -no-window &
+
+script:
+  - ./gradlew build assembleAndroidTest test
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
-
-script: ./gradlew test connectedAndroidTest
+  - ./gradlew connectedAndroidTest
