--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/settings" />
-        <activity android:name=".bluetooth.connectors.BluetoothConnector" />
+        <activity android:name=".connectors.bluetooth.BluetoothConnector" />
         <activity android:name=".AboutActivity"></activity>
     </application>
 
