restructure/update presenter and protocol
now a generic remote control class is introduced. this makes later extension
e.g. via wifi possible. the remote control protocol now synchronises version
information with the server to ensure the same commands are supported on
both sides. also all information between server and client is using json
encoded strings.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    testOptions.unitTests.all {
+        testLogging {
+            exceptionFormat = 'full'
+            events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+        }
+    }
 }
 
 dependencies {
