--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
   - emulator -avd test -no-audio -no-window &
 
 script:
+  - set -e
   - ./gradlew build assembleAndroidTest test
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
