--- a/.travis.yml
+++ b/.travis.yml
@@ -11,25 +11,31 @@ cache:
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
 
+env:
+  - TARGET_API=22 TARGET_ABI=armeabi-v7a
+  - TARGET_API=23 TARGET_ABI=armeabi-v7a
+  - TARGET_API=24 TARGET_ABI=armeabi-v7a
+  - TARGET_API=25 TARGET_ABI=armeabi-v7a
+
 android:
   components:
     - tools
-    - platform-tools
-    - tools
-    - build-tools-26.0.2
-    - android-22
-    - sys-img-armeabi-v7a-android-22
-    - extra-android-m2repository
 
 before_install:
-  # in android block, deprecated 'android' tool will be used to install.
-  # android-27 package has a wrong checksum there, so we use new sdkmanager for
-  # installation
-  - yes | sdkmanager "platforms;android-27"
+  # Install latest emulator images
+  # suppressing output of sdkmanager to keep log under 4MB (travis limit)
+  - yes | sdkmanager tools
+  - yes | sdkmanager --licenses
+  - sdkmanager --install platform-tools > /dev/null
+  - sdkmanager --install "build-tools;26.0.2" > /dev/null
+  - sdkmanager --install "platforms;android-27" > /dev/null
+  - sdkmanager --install "system-images;android-$TARGET_API;google_apis;$TARGET_ABI" > /dev/null
+  - sdkmanager --install "extras;google;m2repository" > /dev/null
+  - sdkmanager --install emulator > /dev/null
 
 before_script:
   # Create emulator
-  - echo no | android create avd --force -n test -t android-22
+  - echo no | avdmanager create avd --force --name test --package "system-images;android-$TARGET_API;google_apis;$TARGET_ABI"
 
 script:
   - ./build.sh
