stabilize test case execution in travis ci one more time
looks like the previous extension of the timings was not enough

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,11 @@ android {
             events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
         }
     }
+
+    // Increase timeout for adb operations in slow environments like travis ci
+    adbOptions {
+        timeOutInMs 10 * 60 * 1000  // 10 minutes
+    }
 }
 
 dependencies {
