--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,6 @@ before_script:
 script:
   - set -e
   - ./gradlew build assembleAndroidTest test
-  - android-wait-for-emulator
+  - ./android-wait-for-emulator.sh
   - adb shell input keyevent 82 &
   - ./gradlew connectedAndroidTest
