--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,11 @@ android {
 
 dependencies {
     // AndroidJUnitRunner and JUnit Rules
-    androidTestCompile 'com.android.support.test:runner:1.0.1'
-    androidTestCompile 'com.android.support.test:rules:1.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test:rules:1.0.1'
 
     // Espresso dependencies
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.robolectric:robolectric:3.4.2'
-    // testCompile 'org.mockito:mockito-core:2.8.47'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.robolectric:robolectric:3.4.2'
 }
