--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Material">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,9 +24,12 @@
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/settings" />
-        <activity android:name=".connectors.bluetooth.BluetoothConnector" />
-        <activity android:name=".AboutActivity" />
+            android:label="@string/settings"
+            android:screenOrientation="portrait" />
+        <activity android:name=".connectors.bluetooth.BluetoothConnector"
+                  android:screenOrientation="portrait" />
+        <activity android:name=".AboutActivity"
+                  android:screenOrientation="portrait" />
     </application>
 
 </manifest>
