--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,12 @@ android:
     - sys-img-armeabi-v7a-android-22
     - extra-android-m2repository
 
+before_install:
+  # in android block, deprecated 'android' tool will be used to install.
+  # android-27 package has a wrong checksum there, so we use new sdkmanager for
+  # installation
+  - yes | sdkmanager "platforms;android-27"
+
 before_script:
   # Create and start emulator
   - echo no | android create avd --force -n test -t android-22
