downgrade minimum supported sdk version to 14 (ice cream sandwich)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "de.wohlfrom.presenter"
-        minSdkVersion 21 // TODO Check what is needed to downgrade to api level 19 or lower
+        minSdkVersion 14
         targetSdkVersion 27
         versionCode 1
         versionName "0.9"
@@ -35,6 +35,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:support-v13:27.0.2'
+
     // AndroidJUnitRunner and JUnit Rules
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test:rules:1.0.1'
