--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
     }
     buildTypes {
         debug {
+            applicationIdSuffix '.debug'
             testCoverageEnabled = true
         }
 
