--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,8 @@ task jacocoTestReport(type: JacocoReport,
 
     def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*',
                       '**/*Test*.*', 'android/**']
-    def debugTree = fileTree(dir: "$project.buildDir/intermediates/classes/debug",
+    def debugTree = fileTree(dir: "$project.buildDir/intermediates/javac/debug/" +
+                "compileDebugJavaWithJavac/classes",
             excludes: fileFilter)
     def mainSrc = "$project.projectDir/src/main/java"
 
