--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.wohlfrom.presenter">
 
+    <!-- permissions for bluetooth enabling, disabling, discovery -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- permissions to read network devices, state and receive broadcast events -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="false"
@@ -27,6 +30,8 @@
             android:label="@string/settings"
             android:screenOrientation="portrait" />
         <activity android:name=".connectors.bluetooth.BluetoothConnector"
+                  android:screenOrientation="portrait" />
+        <activity android:name=".connectors.wifi.WifiConnector"
                   android:screenOrientation="portrait" />
         <activity android:name=".AboutActivity"
                   android:screenOrientation="portrait" />
