Make test output more verbose

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
         testLogging {
             exceptionFormat = 'full'
             events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+            showStandardStreams = true
         }
     }
 
