--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,18 +3,18 @@ apply plugin: 'com.android.application'
 apply plugin: 'jacoco'
 
 jacoco {
-    toolVersion = '0.8.2'
+    toolVersion = '0.8.5'
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
     defaultConfig {
         applicationId "de.wohlfrom.presenter"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 30
         versionCode 4
         versionName "2.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         debug {
@@ -36,6 +36,8 @@ android {
         }
     }
 
+    testOptions.unitTests.includeAndroidResources = true
+
     // Increase timeout for adb operations in slow environments like travis ci
     adbOptions {
         timeOutInMs 10 * 60 * 1000  // 10 minutes
@@ -48,21 +50,31 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:support-v13:28.0.0'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
+    implementation 'androidx.fragment:fragment:1.2.5'
 
     // AndroidJUnitRunner and JUnit Rules
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
 
     // Espresso dependencies
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.robolectric:robolectric:4.3'
-    testImplementation 'org.robolectric:shadows-support-v4:3.3.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation 'androidx.test.ext:junit:1.1.2'
+    testImplementation 'org.robolectric:robolectric:4.4'
+    testImplementation 'org.hamcrest:hamcrest-library:1.3'
+
+    // For fragment testing
+    debugImplementation 'androidx.fragment:fragment-testing:1.2.5'
+    configurations.all {
+        resolutionStrategy {
+            force "androidx.test:monitor:1.3.0"
+        }
+    }
 }
 
 tasks.withType(Test) {
     jacoco.includeNoLocationClasses = true
+    jacoco.excludes = ['jdk.internal.*']
 }
 
 task jacocoTestReport(type: JacocoReport,
@@ -81,9 +93,9 @@ task jacocoTestReport(type: JacocoReport,
             excludes: fileFilter)
     def mainSrc = "$project.projectDir/src/main/java"
 
-    sourceDirectories = files([mainSrc])
-    classDirectories = files([debugTree])
-    executionData = fileTree(dir: project.buildDir, includes: [
+    getSourceDirectories().setFrom(files([mainSrc]))
+    getClassDirectories().setFrom(files([debugTree]))
+    getExecutionData().setFrom(fileTree(dir: project.buildDir, includes: [
             'jacoco/*.exec', 'outputs/code-coverage/connected/*coverage.ec'
-    ])
+    ]))
 }
